[metadata]
name = StreamAlert
summary = A Serverless, Realtime Data Analysis Framework
description-file = README.md
author = Jack Naglieri
author-email = jack.naglieri@airbnb.com
license = Apache License, Version 2.0

[nosetests]
verbosity=2
nocapture=1

[pycodestyle]
max-line-length=90

[yapf]
COLUMN_LIMIT=100

[coverage:report]
omit=stream_alert_cli/*
show_missing=True
