[metadata]
name = StreamAlert
summary = A Serverless, Realtime Data Analysis Framework
description-file = README.md
author = Jack Naglieri
author-email = jack.naglieri@airbnb.com
license = Apache License, Version 2.0

[nosetests]
verbosity=2
nocapture=1

[pycodestyle]
max-line-length=90

[bandit]
# Skip the venv/ and tests/ directories when scanning.
exclude: venv,tests

# Skip the following tests:
#
# - [B108:hardcoded_tmp_directory] Probable insecure usage of temp file/directory.
#   Severity: Medium   Confidence: Medium
#       In Lambda, /tmp is explicitly where local files must be stored
#
# - [B311:blacklist] Standard pseudo-random generators are not suitable for security/cryptographic purposes.
#   Severity: Low   Confidence: High
#       StreamAlert doesn't need cryptographic random number generators
#
# - [B404:blacklist] Consider possible security implications associated with subprocess module.
#   Severity: Low   Confidence: High
#       There are other warnings specific to subprocess calls (e.g. B603, B607)
skips: B108,B311,B404

[yapf]
COLUMN_LIMIT=100

[coverage:report]
omit=stream_alert_cli/*
show_missing=True
